Bug #33732 (Wrong behavior of constants in class and interface extending)